add junit output to the tox pytest command

--- a/tox.ini
+++ b/tox.ini
@@ -4,4 +4,7 @@ envlist= py26,py25
 sitepackages=True
 basepython=python
 commands=
-    py.test
+    py.test \
+        --junitxml={envlogdir}/junit-{envname}.xml \
+        []
+
