fix tox test dependencies

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist= py26,py25
+envlist=py26
 [testenv]
 sitepackages=True
 basepython=python
@@ -9,4 +9,5 @@ commands=
         []
 
 deps=
+    py
     mock
