--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,5 @@
 include *.py *.txt
-recursive-include pygtkhelpers *.py *.ui
+recursive-include pygtkhelpers *.py
 recursive-include examples *.py *.ui
 recursive-include tests *.py *.ui *.png
 recursive-include docs *.py *.rst *.png
