--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,6 @@
+include README.md
+include RELEASE-VERSION
+include version.py
 include *.py *.txt
 recursive-include pygtkhelpers *.py
 recursive-include examples *.py *.ui
