Add ipython-helpers Conda dependency

--- a/.conda-recipe/meta.yaml
+++ b/.conda-recipe/meta.yaml
@@ -16,6 +16,7 @@ requirements:
     - python 2.7*
     - cairo-helpers
     - flatland-fork
+    - ipython-helpers
     - jsonschema
     - pycairo-gtk2
     - redirect-io
@@ -27,6 +28,7 @@ requirements:
     - blinker
     - cairo-helpers
     - flatland-fork
+    - ipython-helpers
     - jsonschema
     - pycairo-gtk2
     - redirect-io
