--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,17 @@
+# See the docstring in versioneer.py for instructions. Note that you must
+# re-run 'versioneer.py setup' after changing this section, and commit the
+# resulting files.
+
+[versioneer]
+VCS = git
+style = pep440
+versionfile_source = pygtkhelpers/_version.py
+versionfile_build = pygtkhelpers/_version.py
+tag_prefix = v
+parentdir_prefix = pygtkhelpers-
+
 [build_sphinx]
 source_dir = docs
 
 [upload_docs]
 upload_dir = build/sphinx
-
